# aClip

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
concept/: aClipConcept.scd
include/: AClipProcessor.hh
src/: AClipProcessor.cc
